intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
* {
  margin: 0;
  padding: 0;
}

.container {
  text-align: center;
  display: grid;
  grid-template-columns: 1fr 4fr;
  gap: 4px;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
}

.header {
  background-color: #393f4d;
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-column: 1 / 3;
  align-items: center;
}

.menu ul,
.menu li {
  font-size: 16px;
  display: grid;
  list-style-type: none;
}

.menu ul {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-items: center;
}

.sidebar {
  background-color: #C50208;
  display: grid;
  gap: 50px;
  grid-column: 1;
  grid-row: 2 / 4;
}

.sidebar div {
  display: grid;
  align-items: center;
}

.sidebar .photo {
  background-color: white;
  color: black;
  font-size: 12px;
  font-weight: normal;
  border-radius: 10px;
}


.sidebar .side-content {
  background-color: white;
  color: black;
  font-size: 16px;
  font-weight: normal;
}

.nav {
  background-color: #C50208;
  display: grid;
  grid-column: 2;
}

.nav ul li {
  font-size: 16px;
  text-transform: uppercase;
}

.nav ul {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  list-style-type: none;
}

.nav li {
  display: grid;
}

.article {
  background-color: #bccbde;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 15px;
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.article .card {
  background-color: #FFFFFF;
  color: black;
  text-align: center;
  height: 200px;
}

.card p {
  color: black;
  font-weight: normal;
  font-size: 14px;
}

.card .title {
  font-size: 18px;
  text-align: center;
}

.footer {
  background-color: #393f4d;
  grid-column: 1 / 3;
}

.footer p {
  font-size: 13px;
  font-weight: normal;
}

